--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@antv/g2": "^4.2.10",
+    "@tanstack/react-query": "^4.29.3",
+    "@trpc/client": "10.21.1-alpha.2",
+    "@trpc/next": "10.21.1-alpha.2",
+    "@trpc/react-query": "10.21.1-alpha.2",
+    "@trpc/server": "10.21.1-alpha.2",
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
