--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx",
+    "prebuild": "cross-env NODE_ENV=production ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -14,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.9.1",
     "@ant-design/icons": "^5.0.1",
     "@antv/g2": "^4.2.10",
     "@tanstack/react-query": "^4.29.3",
@@ -41,6 +44,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@ant-design/static-style-extract": "^1.0.1",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3"
