--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:test": "next dev -p 3030",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cy": "cypress open",
+    "cy:run": "cypress run",
+    "test": "start-server-and-test dev:test 3030 cy:run"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -43,8 +47,10 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "cypress": "^12.10.0",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "start-server-and-test": "^2.0.0"
   }
 }
