--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "cy": "cypress open",
     "cy:run": "cypress run",
-    "test": "start-server-and-test dev:test 3030 cy:run"
+    "test": "start-server-and-test dev:test 3030 cy:run",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -51,6 +52,7 @@
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
-    "start-server-and-test": "^2.0.0"
+    "start-server-and-test": "^2.0.0",
+    "husky": "^8.0.0"
   }
 }
